@@ -1,3 +1,11 @@
+
+Bug fixes:
+* Further fix the management of skb destructors by using shared info
+  destructor data in recent kernels and reverting to the old code
+  in earlier kernels.
+
+
+
 Open-MX 1.2.902 aka 1.3-rc2 (June 9th 2010, svn r3022)
 ======================================================
 The skb->cb release.
